tests/errors/int_to_leds_m.td
component int_to_leds_m {
  requires {
    interface counter_output input;
    interface leds;
  }
}
